@@ -1,3 +1,12 @@
+2011-01-04  Darin Adler  <darin@apple.com>
+
+        Try to fix Windows build.
+
+        * wtf/ThreadingWin.cpp: Added include of PassOwnPtr.h. Fixed paragraphing
+        of conditional includes.
+        (WTF::wtfThreadEntryPoint): Use -> instead of . to dereference pointer.
+        (WTF::createThreadInternal): Tweaked #if to not need separate macro.
+
 2011-01-04  Daniel Bates  <dbates@rim.com>
 
         Reviewed by Adam Roben.
